--- a/adapters/telaria/telariatest/exemplary/multiple-vidoe-app.json
+++ b/adapters/telaria/telariatest/exemplary/multiple-vidoe-app.json
@@ -34,11 +34,7 @@
           "w": 640,
           "h": 480,
           "minduration": 120,
-          "maxduration": 150,
-          "ext": {
-            "podduration": 30,
-            "maxseq": 2
-          }
+          "maxduration": 150
         },
         "ext": {
           "bidder": {
@@ -124,11 +120,7 @@
                 "minduration": 120,
                 "maxduration": 150,
                 "w": 640,
-                "h": 480,
-                "ext": {
-                  "podduration": 30,
-                  "maxseq": 2
-                }
+                "h": 480
               },
               "tagid": "my-adcode",
               "ext": {
@@ -179,10 +171,108 @@
                       "type": "video"
                     }
                   }
-                },
+                }
+              ],
+              "seat": "telaria"
+            }
+          ],
+          "cur": "USD",
+          "ext": {
+            "responsetimemillis": {
+              "telaria": 154
+            },
+            "tmaxrequest": 1000
+          }
+        }
+      }
+    },
+    {
+      "expectedRequest": {
+        "headers": {
+          "Content-Type": [
+            "application/json;charset=utf-8"
+          ],
+          "Accept": [
+            "application/json"
+          ],
+          "X-Openrtb-Version": [
+            "2.5"
+          ],
+          "User-Agent": [
+            "test-user-agent"
+          ],
+          "X-Forwarded-For": [
+            "123.123.123.123"
+          ],
+          "Accept-Language": [
+            "en"
+          ],
+          "Dnt": [
+            "0"
+          ]
+        },
+        "uri": "https://ads.tremorhub.com/ad/rtb/prebid",
+        "body": {
+          "id": "some-request-id",
+          "ext": {
+            "extra": {
+              "custom": "1234"
+            }
+          },
+          "device": {
+            "ua": "test-user-agent",
+            "ip": "123.123.123.123",
+            "language": "en",
+            "dnt": 0
+          },
+          "imp": [
+            {
+              "id": "0_1",
+              "video": {
+                "mimes": [
+                  "video/mp4"
+                ],
+                "minduration": 120,
+                "maxduration": 150,
+                "w": 640,
+                "h": 480
+              },
+              "tagid": "my-adcode",
+              "ext": {
+                "originalTagid": "ogTAGID",
+                "originalPublisherid": "123456789"
+              }
+            }
+          ],
+          "app": {
+            "id": "123456789",
+            "name": "Awesome App",
+            "bundle": "com.app.awesome",
+            "domain": "awesomeapp.com",
+            "cat": [
+              "IAB22-1"
+            ],
+            "publisher": {
+              "id": "my-seatcode"
+            }
+          },
+          "user": {
+            "buyeruid": "awesome-user"
+          },
+          "tmax": 1000
+        },
+        "impIDs":["0_1"]
+      },
+      "mockResponse": {
+        "status": 200,
+        "body": {
+          "id": "awesome-resp-id",
+          "seatbid": [
+            {
+              "bid": [
                 {
                   "id": "25c6976b14e041029afd5b00acabd933",
-                  "impid": "0_0",
+                  "impid": "0_1",
                   "price": 3.5,
                   "adm": "awesome-markup",
                   "adomain": [
@@ -233,7 +323,10 @@
           }
         },
         "type": "video"
-      },{
+      }]
+    },
+    {
+      "bids": [{
         "bid": {
           "id": "25c6976b14e041029afd5b00acabd933",
           "impid": "0_1",
